fix blog image squish

--- a/public/style/global.css
+++ b/public/style/global.css
@@ -41,8 +41,8 @@ body {
 }
 
 #svelte {
-    background: #16688c;
-    min-height: 100vh;
+  background: #16688c;
+  min-height: 100vh;
 }
 
 /* Remove list styles on ul, ol elements with a class attribute */
@@ -60,6 +60,12 @@ a:not([class]) {
 img {
   max-width: 100%;
   display: block;
+}
+
+@media (max-width: 767px) {
+  .html img {
+    height: auto !important;
+  }
 }
 
 /* Inherit fonts for inputs and buttons */
@@ -80,42 +86,43 @@ select {
   }
 }
 
-html, body {
-    font-family: 'Libre Baskerville', serif;
-    color: rgba(0, 0, 0, 0.9);
-    overflow-x: hidden;
-    position: relative;
+html,
+body {
+  font-family: "Libre Baskerville", serif;
+  color: rgba(0, 0, 0, 0.9);
+  overflow-x: hidden;
+  position: relative;
 }
 
 a {
-    color: #B40808;
-    text-decoration: none;
+  color: #b40808;
+  text-decoration: none;
 }
 
 .html {
-    margin-bottom: 40px;
+  margin-bottom: 40px;
 }
 
 .html p {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 #map {
-    height: 400px;
-    width: 100%;
-  }
+  height: 400px;
+  width: 100%;
+}
 
 .workArticle .subtitle {
-    margin-bottom: 20px;
-    font-size: 22px;
+  margin-bottom: 20px;
+  font-size: 22px;
 }
 
 .markdown {
-    margin-bottom: 60px;
+  margin-bottom: 60px;
 }
 
 .markdown p {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .blog-list-item {
@@ -127,14 +134,14 @@ a {
 
 @media (min-width: 768px) {
   .blog-list {
-      display: flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
   }
 
   .blog-list-item {
-      width: 30%;
-      padding: 20px;
+    width: 30%;
+    padding: 20px;
   }
 }
 .blog-list-item {
@@ -168,9 +175,9 @@ a {
 
 @media (min-width: 768px) {
   .contact-page .contact-container {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-column-gap: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 20px;
   }
 }
 
@@ -190,7 +197,7 @@ a {
 }
 
 .centered-link a::before {
-  content: '';
+  content: "";
   position: absolute;
   width: 100%;
   height: 1px;
@@ -221,7 +228,7 @@ a {
     padding: 0;
   }
   .A::before {
-    content: '';
+    content: "";
     position: absolute;
     width: 100%;
     height: 1px;
@@ -259,9 +266,9 @@ a {
   padding-top: 90px;
 }
 
-  .container-atom.isHome {
-      padding-top: 20px;
-  }
+.container-atom.isHome {
+  padding-top: 20px;
+}
 
 @media (min-width: 768px) {
   .container-atom {
@@ -291,7 +298,7 @@ a {
 }
 
 .footer-a-atom::before {
-  content: '';
+  content: "";
   position: absolute;
   width: 100%;
   height: 1px;
